--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^18.7.14",
+    "@types/react": "^18.0.18",
+    "@types/react-dom": "^18.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "typescript": "^4.8.2",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
